--- a/shiny-waffle/firebase.json
+++ b/shiny-waffle/firebase.json
@@ -1,16 +1,3 @@
 {
-  "hosting": {
-    "public": "www",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+  "rulesFile": "database.rules.json"
 }
